--- a/style.css
+++ b/style.css
@@ -4,15 +4,22 @@ body {
     font-size: 62.5%;
     line-height: 3rem;
     margin: 0;
-    display: flex;
+    /*display: flex;*/
     cursor: default;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*height: 100%;*/
+    /*width: 100%;*/
     padding: 0;
 }
-
+.ps-block{
+    position: absolute;
+    right: 23px;
+    bottom: 15px;
+}
+#ps{
+    color: #e17171;
+}
 .main {
     vertical-align: middle;
     text-align: center;
@@ -22,6 +29,58 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+.main2{
+    vertical-align: middle;
+    text-align: center;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.section {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.5s;
+}
+.hidden {
+    opacity: 0;
+}
+.phrase{
+    color: #e17171;
+    text-transform: uppercase;
+    font-size: 2.8vw;
+    line-height: 1em;
+    z-index: 100;
+    text-shadow: 0.04em 0.04em 0 #fcfade;
+}
+.sec1-first-phrase:after {
+    content: "Коли ти поряд, я відчуваю";
+}
+.sec1-second-phrase:after {
+    content: "себе найбагатшою людиною на землі!";
+}
+.sec2-first-phrase:after {
+    content: "Думки про тебе роблять на душі тепліше";
+}
+.sec3-first-phrase:after {
+    content: "Твої очі освітлюють темряву буденності";
+}
+.sec4-first-phrase:after {
+    content: "З кожним днем моя любов до тебе";
+}
+.sec4-second-phrase:after {
+    content: "стає все сильнішою";
+}
+.sec5-second-phrase:after {
+    content: "Я тебе дуже кохаю!";
+}
+.sec5-third-phrase:after {
+    content: "Kocham cię bardzo!";
+}
+
 
 h1,
 h2 {
@@ -77,15 +136,15 @@ h1 span:after {
 }
 
 span.one:after {
-    content: "Will you";
+    content: "Ти";
 }
 
 span.two:after {
-    content: "bee my";
+    content: "мій найкращій";
 }
 
 span.three:after {
-    content: "valentine?";
+    content: "момент!";
 }
 
 @media screen and (min-width: 880px) {
